--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eblog",
+  "name": "reptile",
   "version": "1.0.0",
   "description": "Nuxt.js project",
   "author": "moment3784 <532882128@qq.com>",
